fixing spacing in explore with us and moving quotes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -650,7 +650,7 @@ height: 8em;
 }
 
 .about-box-3{
-    margin-top: 12em;
+    /*margin-top: 12em;*/
 }
 
 .about-box-4{
